# uec-stack

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
csds/: README.md  main.py  requirements.txt
csds-ui/: .gitignore  .lintstagedrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  react-router.config.ts
csds-ui-2/: .prettierrc  eslint.config.ts  package.json  pnpm-lock.yaml
csds-ui-2/app/: app.css  root.tsx  routes.ts
csds-ui-2/app/navigation/: index.tsx  navigation.tsx
csds-ui-2/app/routes/: charger-unit.tsx  home.tsx  layout.tsx  session-details.tsx  (+1 more)
csds-ui-2/data-model/: charging-station-config.ts  charging-station-unit.ts  evse.ts  index.ts  variables.ts
csds-ui/.husky/: pre-commit
csds-ui/app/: app.css  root.tsx  routes.ts
csds-ui/mock-data/: generators.ts  sessions.ts
csds/.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
csds/uec_csds/: csds.py  database.py  engine.py  ftp.py  utils.py
docs/adr/: ADR-001-api-schemas-single-source-of-truth.md  ADR-004-ocpp-21-support.md  README.md
evse-agent/: CMakeLists.txt
evse-agent/.devcontainer/: Dockerfile  devcontainer.json
evse-agent/conf/: uec.json
evse-agent/include/uec/telemetry/: control_pilot.h
evse-agent/src/: config_yaml.cpp  config_yaml.h  everest.cpp  everest.h  main.cpp  mqtt.h
evse-agent/src/telemetry/: control_pilot.cpp
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
tests/: conftest.py  test_auth.py  test_sessions_failure.py
(+77 files in other folders)
