[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uec-csds"
version = "0.1.0"
description = "UEC CSDS backend service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "csds"}

[tool.setuptools.packages.find]
where = ["csds"]

